--- a/Project 4.1/css/style.css
+++ b/Project 4.1/css/style.css
@@ -7,40 +7,59 @@ body{
   background-size: 100%;
   background-repeat: no-repeat;
 }
+.topmenu{
+  background-color: #084B8A;
+  height: 34px;
+}
 .header{
   list-style: none;
-  background-color: #084B8A;
   padding-left: 610px;
-  height: 34px;
+  width: 385px;
+  border-right: 1px solid #58D3F7;
+  float: left;
 }
 .header li{
   display: inline-block;
-  padding: 8px 10px;
   text-align: right;
   color: white;
 }
-.choose:hover{
-  background-color: #58D3F7;
-  color: white;
+.choose{
+  height: 34px;
 }
-a{
+.choose a{
+  display: inline-block;
   text-decoration: none;
   color: #58D3F7;
+  height: 26px;
+  padding: 8px 10px 0px 10px;
+}
+.choose a:hover{
+  background-color: #58D3F7;
+  color: white;
 }
 .under{
   text-decoration: underline;
   color: white;
 }
-li.flag{
-  border-left: 1px solid blue;
+.flag a{
+  display: inline-block;
+  text-decoration: none;
   background-image: url(../img/flag.png);
   background-repeat: no-repeat;
   background-position: left;
-  padding-left: 30px;
+  padding: 8px 10px 0px 30px;
+  margin-left: 10px;
+  color: white;
+  height: 26px;
+  float: left;
 }
 .ola{
   background-image: url(../img/ola.png);
   background-repeat: repeat-x;
+  height: 26px;
+  float: left;
+  padding: 8px 10px 0px 10px;
+  color: white;
 }
 .box{
   background-color: rgba(0, 0, 0, 0.5);
@@ -54,6 +73,7 @@ li.flag{
 .cadastre{
   font-size: 21px;
   padding: 10px 0px;
+  border-bottom: 1px solid white;
 }
 .facebook{
   margin: 30px 0px;
