--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -4,6 +4,9 @@ body {
   color: black;
   margin: 108px 425px;
 }
+.block1, .block2, .block3{
+  border-bottom: 1px solid grey;
+}
 .name{
   font-size: 36px;
   font-weight: bold;
@@ -13,9 +16,11 @@ body {
   margin-bottom: 20px;
 }
 .pic{
+  display: block;
   border: 1px solid grey;
   width: 162px;
-  margin: 0 35%;
+  margin: 0 auto;
+  text-align: center;
 }
 .info{
   color: grey;
@@ -27,11 +32,8 @@ body {
 .points{
   font-size: 15px;
   padding-left: 32px;
-  margin-top: 10px;
+  margin-top: 0px;
   display: inline-block;
-}
-hr{
-  margin-bottom: 10px;
 }
 .link{
   margin-left: 36px;
