--- a/Project 3/css/design.css
+++ b/Project 3/css/design.css
@@ -10,9 +10,10 @@ body{
   font-family: Calibri;
 }
 .main{
-margin: 0px 100px 20px 100px;
+margin: 0px auto 20px auto;
 border: 1px solid grey;
 height: 90%;
+width: 1000px;
 background-color: white;
 -webkit-box-shadow: 0px 3px 10px 3px rgba(0,0,0,0.4);
 -moz-box-shadow: 0px 3px 10px 3px rgba(0,0,0,0.4);
@@ -20,14 +21,14 @@ box-shadow: 0px 3px 10px 3px rgba(0,0,0,0.4);
 position: relative;
 }
 .top{
-  height: 183px;
+  height: 184px;
 }
 .countries{
   height: 60px;
   width: 380px;
   float: right;
   clear: both;
-  margin-top: 40px;
+  margin-top: 33px;
 }
 .countries a{
   float: left;
@@ -82,19 +83,19 @@ position: relative;
   font-family: Calibri;
 }
 div.beach{
-  height: 282px;
+  height: 238px;
 }
 .beach img{
   width: 100%;
-  height: 282px;
+  height: 238px;
 }
 ul.menu{
   list-style: none;
   background-color: #2E2E2E;
-  height: 45px;
+  height: 31px;
   padding: 0px;
   margin: 0px;
-  font-size: 17px;
+  font-size: 16px;
   text-align: center;
 }
 ul:after{
@@ -107,28 +108,28 @@ ul:after{
   float: left;
   position: relative;
   color: white;
-  width: 160px;
+  width: 142px;
 }
 ul.menu>li>a{
   color: white;
   display: block;
-  padding: 10px;
+  padding: 4px;
   text-decoration: none;
 }
 .single-points{
-  margin-top: 4px;
-}
-.lists{
   margin-top: 2px;
 }
+/*.lists{
+  margin-top: 2px;
+}*/
 /*ul.menu>li>a:hover{
   background-color: #2E2E2E;
 }*/
 ul.submenu{
   display: none;
   position: absolute;
-  width: 160px;
-  top: 45px;
+  width: 142px;
+  top: 31px;
   left: 0;
   -webkit-box-shadow: 0px 3px 10px 3px rgba(0,0,0,0.4);
   -moz-box-shadow: 0px 3px 10px 3px rgba(0,0,0,0.4);
@@ -152,7 +153,7 @@ ul.menu>li:hover>ul.submenu{
   display: block;
 }
 .content{
-  height: 48.5%;
+  height: 54.2%;
 }
 .info{
   text-align: center;
@@ -160,7 +161,7 @@ ul.menu>li:hover>ul.submenu{
   float: left;
   clear: both;
   height: 100%;
-  width: 18%;
+  width: 21%;
   color: #6E6E6E;
   border-right: 1px solid grey;
 }
@@ -169,7 +170,7 @@ ul.menu>li:hover>ul.submenu{
   background-color: #E6E6E6;
   float: right;
   height: 100%;
-  width: 18%;
+  width: 21%;
   color: #6E6E6E;
   position: relative;
   border-left: 1px solid grey;
