--- a/Project 4.1/css/style.css
+++ b/Project 4.1/css/style.css
@@ -2,13 +2,12 @@
   margin: 0;
   padding: 0;
 }
-@font-face {
-  font-family: 'Open Sans', sans-serif;
-}
+/*@import url (https://fonts.googleapis.com/css?family=Open+Sans);*/
 body{
   background-image: url(../img/back.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
+  /*font-family: Open Sans;*/
 }
 .topmenu{
   background-color: #084B8A;
@@ -76,7 +75,7 @@ body{
 .cadastre{
   font-size: 21px;
   padding: 10px 0px;
-  border-bottom: 1px solid white;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.7);
 }
 .facebook{
   margin: 30px 0px;
